--- a/contact.html
+++ b/contact.html
@@ -93,16 +93,16 @@
                 <label class="form-check-label" for="flexCheckDefault3">
                     Are you a coder?
                 </label>
-            </div>
-
-            <div class="form-group my-2">
-                <label for="exampleFormControlTextarea1">Elaborate your concern</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
+            </div>            
             <div class="form-group my-3">
                 <label for="exampleFormControlTextarea1">Tell Us About Yourself</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <div class="form-group my-2">
+                <label for="exampleFormControlTextarea1">Elaborate your concern</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button class="btn btn-primary">Submit</button>
     </div>
 
     </form>
